<resources>
    <string name="app_name">JepretaJitu</string>
    <string name="tittle_name">JepretanJitu</string>
    <string name="welcome">Selamat datang</string>
    <string name="login">Silahkan Login terdahulu</string>
    <string name="masukan_nik">Masukan Nomor Handphone</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="login_button">Login</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="choose_foto_profile">Silahkan pilih foto</string>
    <string name="hint_name">Silahkan masukan nama</string>
    <string name="hint_email">Silahkan masukan email</string>
    <string name="login_email">Masukan email</string>
    <string name="hint_nomor">Silahkan masukan nomor hp</string>
    <string name="hint_alamat">Silahkan masukan alamat</string>
    <string name="hint_password">Silahkan masukan password</string>
    <string name="simpan">Simpan</string>

    <string name="wrong_password">email atau password anda salah</string>
    <string name="selamat_datang_admin">Selamat datang Admin</string>
    <string name="approve_pembayaran">Approve Pembayaran</string>
    <string name="update_best_seller">Update Best Seller</string>
    <string name="upload_foto_katalog">Upload Foto Katalog</string>
    <string name="profile">Profile</string>
    <string name="logout">logout</string>
    <string name="lihat_pesanan">lihat pesanan</string>
    <string name="selamat_datang_kembali">Selamat datang kembali</string>
    <string name="upload_katalog_text">Silahkan Upload Katalog Anda</string>
    <string name="silahkan_masukan_domisili_anda">Silahkan masukan domisili</string>
    <string name="silahkan_masukan_deskripsi">Silahkan masukan deskripsi</string>
    <string name="silahkan_masukan_harga">Silahkan masukan harga</string>
    <string name="silahkan_pilih_foto_untuk_katalog">Silahkan pilih Foto untuk Katalog</string>
    <string name="upload">Upload</string>

    <string name="editext_domisili_null">Domisili tidak boleh kosong</string>
    <string name="editext_deskripsi_null">Deskripsi tidak boleh kosong</string>
    <string name="editext_harga_null">Harga tidak boleh kosong</string>
    <string name="editext_judul_null">Judul tidak boleh kosong</string>
    <string name="image_null">Foto tidak boleh kosong</string>
    <string name="katalog_success">Upload katalog anda berhasil</string>
    <string name="tv_simpan">SIMPAN</string>
    <string name="lihat_katalog">Lihat Katalog</string>
    <string name="pesan_sekarang">PESAN SEKARANG</string>
    <string name="ubah">Ubah</string>
    <string name="kirim_ulasan">kirim ulasan</string>
    <string name="berikan_ulasan_anda">Berikan ulasan anda</string>
    <string name="masukan_ulasan_anda_tentang_jasa_ini">Masukan ulasan anda tentang jasa ini</string>

    <string-array name="level_users">
        <item>Pilih Level</item>
        <item>Pemakai Jasa</item>
        <item>Penjual Jasa</item>
    </string-array>
</resources>