<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icon_jepretan"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:fontFamily="@font/poppins_extrabold"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"
        android:visibility="gone"
        android:fontFamily="@font/poppins_extrabold"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/img_one"
        app:layout_constraintTop_toBottomOf="@id/tvTittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_extrabold"
        android:hint="@string/login_email"
        android:paddingStart="20dp"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/img_one"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins_extrabold"
        android:layout_marginTop="15dp"
        android:hint="@string/masukan_password"
        android:paddingStart="20dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/btn_simpan"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/img_one"
        android:backgroundTint="#2CBAFA"
        android:fontFamily="@font/poppins_extrabold"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_simpan"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittle_name"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/poppins_extrabold"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/icon_bg"/>

</androidx.constraintlayout.widget.ConstraintLayout>