<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.admin.MenuUtama">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icon_jepretan"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_fotograp_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang_admin"
        android:fontFamily="@font/poppins_extrabold"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_upload_katalog"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/img_one"
        android:backgroundTint="@color/icon_bg"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="35dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_light"
        android:text="@string/lihat_katalog"
        app:layout_constraintTop_toBottomOf="@id/tv_fotograp_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/img_one"
        android:backgroundTint="@color/icon_bg"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_light"
        android:text="@string/profile"
        app:layout_constraintTop_toBottomOf="@id/btn_upload_katalog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/img_one"
        android:backgroundTint="@color/icon_bg"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_light"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@id/btn_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>