<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.fotographer.UploadKatalogActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icon_jepretan"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_fotograp_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_katalog_text"
        android:fontFamily="@font/poppins_extrabold"
        android:textColor="@color/icon_bg"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="@id/edt_domisili"
        />

    <EditText
        android:id="@+id/edt_domisili"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_fotograp_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:hint="@string/silahkan_masukan_domisili_anda"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/bg_katalog"/>
    <EditText
        android:id="@+id/edt_deskripsi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/edt_domisili"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:hint="@string/silahkan_masukan_deskripsi"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/bg_katalog"/>
    <EditText
        android:id="@+id/edt_harga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/edt_deskripsi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:hint="@string/silahkan_masukan_harga"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/bg_katalog"/>
    <TextView
        android:id="@+id/tv_choose_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/silahkan_pilih_foto_untuk_katalog"
        android:fontFamily="@font/poppins_extrabold"
        android:textColor="@color/icon_bg"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/edt_harga"
        app:layout_constraintStart_toStartOf="@id/edt_harga"
        />
    <ImageView
        android:id="@+id/img_add"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toStartOf="@id/img_add_2"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_foto"
        app:layout_constraintStart_toStartOf="@id/edt_harga"
        android:src="@drawable/ic_add_image"/>
    <ImageView
        android:id="@+id/img_add_2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_foto"
        app:layout_constraintStart_toEndOf="@id/img_add"
        android:src="@drawable/ic_add_image"
        app:layout_constraintEnd_toStartOf="@id/img_add_3"/>
    <ImageView
        android:id="@+id/img_add_3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_foto"
        app:layout_constraintStart_toEndOf="@id/img_add_2"
        app:layout_constraintEnd_toEndOf="@id/edt_harga"
        android:src="@drawable/ic_add_image"/>

    <Button
        android:id="@+id/btn_upload_katalog"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/img_one"
        android:backgroundTint="@color/icon_bg"
        android:layout_marginTop="35dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_light"
        android:text="@string/upload"
        app:layout_constraintTop_toBottomOf="@id/img_add_3"
        app:layout_constraintStart_toStartOf="@id/edt_harga"
        app:layout_constraintEnd_toEndOf="@id/edt_harga"/>

</androidx.constraintlayout.widget.ConstraintLayout>