<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.user.UlasanActivity">


    <TextView
        android:id="@+id/tv_judul_ulasan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berikan_ulasan_anda"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:stepSize="1"
        android:progressTint="@color/icon_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_judul_ulasan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/edt_input_ulasan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/masukan_ulasan_anda_tentang_jasa_ini"
        app:layout_constraintTop_toBottomOf="@id/ratingbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_upload_katalog"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/img_one"
        android:backgroundTint="@color/icon_bg"
        android:layout_marginTop="35dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_light"
        android:text="@string/kirim_ulasan"
        app:layout_constraintTop_toBottomOf="@id/edt_input_ulasan"
        app:layout_constraintStart_toStartOf="@id/edt_input_ulasan"
        app:layout_constraintEnd_toEndOf="@id/edt_input_ulasan"/>

</androidx.constraintlayout.widget.ConstraintLayout>