<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.admin.MenuUtama">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/icon_jepretan"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_admin_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang_admin"
        android:fontFamily="@font/poppins_extrabold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



    <Button
        android:id="@+id/btn_approve_pembayaran"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/img_one"
        android:backgroundTint="@color/prim"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_black"
        android:text="@string/approve_pembayaran"
        app:layout_constraintTop_toBottomOf="@id/tv_admin_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:visibility="visible"
        android:background="@drawable/img_one"
        android:backgroundTint="@color/prim"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_black"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@id/btn_approve_pembayaran"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>